# fractal

./: Cargo.toml
src/: algorithms.rs  app.rs  fractal_generator.rs  image.rs  lib.rs  main.rs
