[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["persistence"] }
egui = "0.21.0"
image = "0.24.6"
num-complex = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
tracing-subscriber = "0.3.17"
